[tool.poetry]
name = "pyskim"
version = "0.1.0"
description = ""
authors = ["neelabalan <neelabalan.n@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
